[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openmind-agent"
version = "0.1.0"
description = "Open-source AI Agent Framework with multi-provider support, tool use, and memory"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "OpenMind Contributors"},
]
keywords = ["ai", "agent", "llm", "openai", "ollama", "groq", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
groq = ["groq>=0.4"]
ollama = []  # Uses urllib, no extra deps
all = ["openai>=1.0", "groq>=0.4"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.scripts]
openmind = "openmind.cli:main"

[project.urls]
Homepage = "https://github.com/openmind-ai/openmind"
Documentation = "https://openmind-ai.readthedocs.io"
Repository = "https://github.com/openmind-ai/openmind"
Issues = "https://github.com/openmind-ai/openmind/issues"
Changelog = "https://github.com/openmind-ai/openmind/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["openmind*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
