[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exort-agent"
version = "2.0.0"
description = "Exort — The Open Agent Engine. Free AI for Everyone. An autonomous AI agent with tool use, memory, and multi-provider support."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Exort Contributors"},
]
keywords = ["ai", "agent", "llm", "chatbot", "open-source", "tools", "groq", "ollama", "free"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
telegram = ["python-telegram-bot>=21.0"]
full = [
    "anthropic>=0.30",
    "python-telegram-bot>=21.0",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
exort = "exort.cli:main"

[project.urls]
Homepage = "https://github.com/askexort/exort"
Repository = "https://github.com/askexort/exort"
Issues = "https://github.com/askexort/exort/issues"

[tool.setuptools.packages.find]
include = ["exort*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
